<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comandapizza.pizzaorder.PizzaOptionsActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <ImageView
                android:id="@+id/IDImaginePizza"
                android:contentDescription="@string/imageViewContentDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IDContinutPizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="@string/descrierePizza" >

                <requestFocus />
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/IDNumePizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/numePizza" />

                <TextView
                    android:id="@+id/IDCantitatePizza"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="@string/cantitatePizza" />

                <ImageButton
                    android:id="@+id/IDButonPlus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentDescriptionButonPlus"
                    android:maxHeight="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/button_add" />

                <ImageButton
                    android:id="@+id/IDButonMinus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentDescriptionButonMinus"
                    android:maxHeight="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/button_delete" />
                
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                 >
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marimeTextView"/>
                
                
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
